--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gridview_background"
     android:orientation="vertical"
     android:paddingTop="?android:attr/actionBarSize"
+    android:background="#f1f1f1"
     tools:context=".AboutFragment">
 
     <android.support.v7.widget.CardView
@@ -46,7 +46,7 @@
 
             <TextView
                 android:id="@+id/fragment_about_msg"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="@string/about_msg"
@@ -58,6 +58,17 @@
                 android:layout_marginLeft="7dp"
                 android:layout_marginRight="7dp"
                 android:background="#399322" />
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="30dp" />
+            <TextView
+                android:id="@+id/fragment_about_msg2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/about_msg2"
+                android:textColor="@color/pale_gray"
+                android:textSize="20sp" />
 
 
         </LinearLayout>
@@ -65,38 +76,9 @@
 
     </android.support.v7.widget.CardView>
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/fragment_about_card_abh_thanks"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/fragment_about_card_title"
-        android:layout_margin="10dp"
-        card_view:cardCornerRadius="2dp"
-        card_view:cardElevation="4dp">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="center"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp">
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="10dp"
-                android:src="@drawable/ic_abh_small" />
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:src="@drawable/ic_rtlogo_small" />
-
-        </LinearLayout>
-    </android.support.v7.widget.CardView>
     <ImageView
-        android:layout_below="@id/fragment_about_card_abh_thanks"
+        android:layout_below="@id/fragment_about_card_title"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
