--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,161 +1,117 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@drawable/gridview_background"
-    android:paddingTop="?android:attr/actionBarSize"
-    tools:context=".HomeFragment">
-
-    <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="@string/app_name"
-        android:textColor="@color/pale_black"
-        android:textSize="35sp" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginRight="7dp"
-        android:layout_marginLeft="7dp"
-        android:layout_marginBottom="7dp"
-        android:background="#399322" />
-
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:layout_margin="10dp"
-        android:layout_marginBottom="5dp">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="Recently viewed"
-                android:textColor="@color/pale_gray"
-                android:textSize="25sp" />
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginRight="7dp"
-                android:layout_marginLeft="7dp"
-                android:background="#399322" />
-            <ImageView
-                android:layout_marginTop="-6dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/test_img1"
-                android:src="@drawable/home_shelf"/>
-        </LinearLayout>
-    </android.support.v7.widget.CardView>
-
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:layout_margin="10dp"
-        android:layout_marginBottom="5dp">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="@string/favourites"
-                android:textColor="@color/pale_gray"
-                android:textSize="25sp" />
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginRight="7dp"
-                android:layout_marginLeft="7dp"
-                android:background="#399322" />
-            <ImageView
-                android:layout_marginTop="-6dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/test_img"
-                android:src="@drawable/home_shelf"/>
-        </LinearLayout>
-    </android.support.v7.widget.CardView>
-
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginRight="7dp"
-        android:layout_marginLeft="7dp"
-        android:background="#399322" />
-
-    <android.support.v7.widget.CardView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:layout_gravity="center"
-        android:layout_margin="10dp"
-        android:layout_marginBottom="5dp">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end"
-        android:orientation="horizontal">
-
-
-            <ImageView
-                android:id="@+id/fragment_home_abh_link"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:adjustViewBounds="true"
-                android:contentDescription="@string/rtn_link_description"
-                android:maxHeight="40dp"
-                android:src="@drawable/ic_abh_small" />
-
-            <ImageView
-                android:id="@+id/fragment_home_rtn_link"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:adjustViewBounds="true"
-                android:contentDescription="@string/rtn_link_description"
-                android:maxHeight="40dp"
-                android:src="@drawable/rtlogo_small" />
-
-            <ImageView
-                android:id="@+id/fragment_home_imdb_link"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:adjustViewBounds="true"
-                android:contentDescription="@string/imdb_link_description"
-                android:maxHeight="40dp"
-                android:src="@drawable/imdb_small" />
-
-    </LinearLayout>
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:scaleType="fitStart"
-            android:contentDescription="@string/slide_arrows"
-            android:src="@drawable/slide_invert" />
-</android.support.v7.widget.CardView>
-
-
-
-    <ImageView
+    <RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:contentDescription="@string/btm_img_icon"
-        android:scaleType="fitEnd"
-        android:src="@drawable/actionbar_icon" />
+        android:orientation="vertical"
+        android:paddingTop="?android:attr/actionBarSize"
+        android:background="#f1f1f1"
+        tools:context=".HomeFragment">
+        <RelativeLayout
+            android:id="@+id/fragment_home_recent_relative"
+            android:layout_alignParentTop="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
+            <android.support.v7.widget.CardView
+                android:id="@+id/fragment_home_recent_card"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp">
 
-</LinearLayout>
+                <LinearLayout
+                    android:id="@+id/fragment_home_recent_card_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="Recently viewed movies"
+                        android:textColor="@color/pale_gray"
+                        android:textSize="20sp" />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_marginRight="7dp"
+                        android:layout_marginLeft="7dp"
+                        android:background="#399322" />
+                </LinearLayout>
+
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="230dp" />
+
+            </android.support.v7.widget.CardView>
+
+            <com.menil.rottenmovies.HorizontialListView
+                android:id="@+id/listview_recent"
+                android:layout_width="wrap_content"
+                android:layout_height="200dp"
+                android:layout_marginTop="-205dp"
+                android:layout_below="@id/fragment_home_recent_card" />
+
+        </RelativeLayout>
+        <RelativeLayout
+            android:id="@+id/fragment_home_favourite_relative"
+            android:layout_below="@id/fragment_home_recent_relative"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <android.support.v7.widget.CardView
+                android:id="@+id/fragment_home_favourite_card"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp">
+
+                <LinearLayout
+                    android:id="@+id/fragment_home_favourite_card_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="@string/favourites"
+                        android:textColor="@color/pale_gray"
+                        android:textSize="20sp" />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_marginRight="7dp"
+                        android:layout_marginLeft="7dp"
+                        android:background="#399322" />
+                </LinearLayout>
+
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="230dp" />
+
+            </android.support.v7.widget.CardView>
+
+            <com.menil.rottenmovies.HorizontialListView
+                android:id="@+id/listview_favourite"
+                android:layout_width="wrap_content"
+                android:layout_height="200dp"
+                android:layout_marginTop="-205dp"
+                android:layout_below="@id/fragment_home_favourite_card" />
+
+        </RelativeLayout>
+<ImageView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_below="@+id/fragment_home_favourite_relative"
+    android:src="@drawable/actionbar_icon"
+    android:scaleType="fitEnd"/>
+    </RelativeLayout>
