--- a/app/src/main/res/layout/grid_full_card_home.xml
+++ b/app/src/main/res/layout/grid_full_card_home.xml
@@ -2,28 +2,28 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_view"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:layout_gravity="center"
     card_view:cardElevation="3dp">
 
     <RelativeLayout
         android:id="@+id/full_card_2"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/full_card_img"
-            android:layout_width="fill_parent"
-            android:layout_height="230dp"
+            android:layout_width="110dp"
+            android:layout_height="155dp"
             android:adjustViewBounds="true"
             android:background="#f1f1f1"
             android:scaleType="fitXY" />
 
         <LinearLayout
             android:id="@+id/full_card_under"
-            android:layout_width="match_parent"
+            android:layout_width="110dp"
             android:layout_height="wrap_content"
             android:layout_below="@id/full_card_img"
             android:layout_gravity="center"
@@ -35,15 +35,15 @@
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/movie_title_placeholder"
                 android:ellipsize="marquee"
-                android:layout_marginLeft="5dp"
-                android:layout_marginStart="5dp"
-                android:layout_marginRight="5dp"
-                android:layout_marginEnd="5dp"
+                android:layout_marginLeft="3dp"
+                android:layout_marginStart="3dp"
+                android:layout_marginRight="3dp"
+                android:layout_marginEnd="3dp"
                 android:scrollHorizontally="true"
                 android:singleLine="true"
                 android:text="@string/app_name"
                 android:textColor="@color/pale_black"
-                android:textSize="18sp"
+                android:textSize="14sp"
                 android:textStyle="bold|italic" />
 
             <TextView
@@ -52,35 +52,15 @@
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/movie_subtitle_placeholder"
                 android:ellipsize="end"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp"
+                android:paddingLeft="2dp"
+                android:paddingRight="2dp"
                 android:text="@string/app_name"
                 android:textColor="@color/pale_gray"
-                android:textSize="12sp" />
+                android:textSize="10sp" />
 
 
         </LinearLayout>
 
-        <Space
-            android:id="@+id/full_card_space"
-            android:layout_width="match_parent"
-            android:layout_height="14dp"
-            android:layout_below="@+id/full_card_under" />
-
-        <TextView
-            android:id="@+id/full_card_actors"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/full_card_space"
-            android:contentDescription="@string/movie_subtitle_placeholder"
-            android:ellipsize="marquee"
-            android:paddingLeft="4dp"
-            android:paddingRight="4dp"
-            android:scrollHorizontally="true"
-            android:singleLine="true"
-            android:text="@string/app_name"
-            android:textColor="@color/green_700"
-            android:textSize="13sp" />
 
     </RelativeLayout>
 </android.support.v7.widget.CardView>
