--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -82,6 +82,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/fragment_about_card_title"
+        android:gravity="center"
         android:orientation="horizontal">
 
         <com.facebook.widget.LoginButton
@@ -90,6 +91,20 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal" />
 
+        <Button
+            android:id="@+id/twitterlogin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/material_blue_500"
+            android:text="tw"
+            android:textColor="@color/white" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/button_material_dark"
+            android:text="g+"
+            android:textColor="@color/white" />
     </LinearLayout>
 
     <ImageView
