--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -43,20 +43,22 @@
                     android:layout_marginLeft="7dp"
                     android:layout_marginRight="7dp"
                     android:background="#399322" />
-            </LinearLayout>
 
-            <Space
-                android:layout_width="match_parent"
-                android:layout_height="230dp" />
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp" />
+            </LinearLayout>
 
         </android.support.v7.widget.CardView>
 
-        <com.menil.rottenmovies.HorizontialListView
+        <org.lucasr.twowayview.TwoWayView
             android:id="@+id/listview_favourite"
+            style="@style/TwoWayView"
             android:layout_width="wrap_content"
-            android:layout_height="200dp"
-            android:layout_below="@id/fragment_home_favourite_card"
-            android:layout_marginTop="-205dp" />
+            android:layout_height="240dp"
+            android:layout_alignParentTop="true"
+            android:drawSelectorOnTop="true"
+            android:paddingTop="30dp" />
 
     </RelativeLayout>
 
@@ -87,27 +89,28 @@
                     android:text="Recently viewed movies"
                     android:textColor="@color/pale_gray"
                     android:textSize="20sp" />
-
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_marginLeft="7dp"
                     android:layout_marginRight="7dp"
                     android:background="#399322" />
-            </LinearLayout>
 
-            <Space
-                android:layout_width="match_parent"
-                android:layout_height="230dp" />
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp" />
+            </LinearLayout>
 
         </android.support.v7.widget.CardView>
 
-        <com.menil.rottenmovies.HorizontialListView
+        <org.lucasr.twowayview.TwoWayView
             android:id="@+id/listview_recent"
+            style="@style/TwoWayView"
             android:layout_width="wrap_content"
-            android:layout_height="200dp"
-            android:layout_below="@id/fragment_home_recent_card"
-            android:layout_marginTop="-205dp" />
+            android:layout_height="210dp"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="30dp"
+            android:drawSelectorOnTop="true" />
 
     </RelativeLayout>
 
