--- a/app/src/main/res/layout/grid_full_card_home.xml
+++ b/app/src/main/res/layout/grid_full_card_home.xml
@@ -3,14 +3,14 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_view"
     android:layout_width="wrap_content"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_gravity="center"
     card_view:cardElevation="3dp">
 
     <RelativeLayout
         android:id="@+id/full_card_2"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <com.menil.rottenmovies.RemoteImageView
