--- a/app/src/main/res/menu/menu_favourites.xml
+++ b/app/src/main/res/menu/menu_favourites.xml
@@ -1,35 +1,35 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".Main">
-    <item
+    <!--<item
         android:id="@+id/action_share"
         android:icon="@drawable/ic_share_white_48dp"
         android:orderInCategory="100"
-        android:showAsAction="always"
-        android:title="@string/action_share" />
+        android:showAsAction="ifRoom"
+        android:title="@string/action_share" />-->
     <item
         android:id="@+id/action_search"
         android:actionViewClass="android.widget.SearchView"
         android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
-        android:orderInCategory="200"
+        android:orderInCategory="100"
         android:showAsAction="ifRoom"
         android:title="@string/action_search" />
 
     <item
         android:id="@+id/action_settings"
         android:icon="@drawable/ic_settings_black_48dp"
-        android:orderInCategory="300"
+        android:orderInCategory="200"
         android:showAsAction="never"
         android:title="@string/action_settings" />
     <item
         android:id="@+id/action_about"
         android:icon="@drawable/ic_help_black_48dp"
-        android:orderInCategory="400"
+        android:orderInCategory="300"
         android:showAsAction="never"
         android:title="@string/action_about" />
     <item
         android:id="@+id/action_exit"
-        android:orderInCategory="500"
+        android:orderInCategory="400"
         android:showAsAction="never"
         android:title="@string/action_exit" />
 
