--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,4 +4,8 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="@android:Theme.Holo.Light.DarkActionBar" />
     <!-- Customize your theme here. -->
+
+    <style name="TwoWayView">
+        <item name="android:orientation">horizontal</item>
+    </style>
 </resources>
