--- a/app/src/main/res/layout/grid_full_card_home.xml
+++ b/app/src/main/res/layout/grid_full_card_home.xml
@@ -19,6 +19,7 @@
             android:layout_height="155dp"
             android:adjustViewBounds="true"
             android:background="#f1f1f1"
+            android:contentDescription="GridImg"
             android:scaleType="fitXY" />
 
         <LinearLayout
