--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -9,110 +9,136 @@
     android:paddingTop="?android:attr/actionBarSize"
     tools:context=".AboutFragment">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/fragment_about_card_title"
+    <View
+        android:id="@+id/fragment_about_card_color"
         android:layout_width="wrap_content"
+        android:layout_height="140dp"
+        android:layout_alignParentTop="true"
+        android:background="#399322"/>
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="80dp"
+        android:layout_below="@id/fragment_about_card_color"
+        android:layout_marginTop="-120dp"
+        android:contentDescription="@string/btm_img_icon"
+        android:src="@drawable/actionbar_icon" />
+    <ScrollView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_margin="10dp"
-        card_view:cardCornerRadius="2dp"
-        card_view:cardElevation="3dp">
+        android:layout_marginTop="-30dp"
+        android:layout_below="@id/fragment_about_card_color">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/fragment_about_title"
-                android:layout_width="fill_parent"
+            <android.support.v7.widget.CardView
+                android:id="@+id/fragment_about_card_title"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10sp"
-                android:gravity="center"
-                android:text="@string/app_name"
-                android:textColor="@color/pale_black"
-                android:textSize="35sp" />
+                android:layout_gravity="center_vertical"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                card_view:cardCornerRadius="2dp"
+                card_view:cardElevation="3dp">
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginLeft="7dp"
-                android:layout_marginRight="7dp"
-                android:background="#399322" />
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
 
-            <Space
-                android:layout_width="match_parent"
-                android:layout_height="30dp" />
+                    <TextView
+                        android:id="@+id/fragment_about_title"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10sp"
+                        android:gravity="center"
+                        android:text="@string/app_name"
+                        android:textColor="@color/pale_black"
+                        android:textSize="35sp" />
 
-            <TextView
-                android:id="@+id/fragment_about_msg"
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_marginLeft="7dp"
+                        android:layout_marginRight="7dp"
+                        android:background="#399322" />
+
+                    <Space
+                        android:layout_width="match_parent"
+                        android:layout_height="30dp" />
+
+                    <TextView
+                        android:id="@+id/fragment_about_msg"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="@string/about_msg"
+                        android:textColor="@color/pale_gray"
+                        android:textSize="20sp" />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_marginLeft="7dp"
+                        android:layout_marginRight="7dp"
+                        android:background="#399322" />
+
+                    <Space
+                        android:layout_width="match_parent"
+                        android:layout_height="30dp" />
+
+                    <TextView
+                        android:id="@+id/fragment_about_msg2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="@string/about_msg2"
+                        android:textColor="@color/pale_gray"
+                        android:textSize="20sp" />
+
+
+                </LinearLayout>
+
+
+            </android.support.v7.widget.CardView>
+
+            <LinearLayout
+                android:id="@+id/fragment_about_social_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="@string/about_msg"
-                android:textColor="@color/pale_gray"
-                android:textSize="20sp" />
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginLeft="7dp"
-                android:layout_marginRight="7dp"
-                android:background="#399322" />
-            <Space
-                android:layout_width="match_parent"
-                android:layout_height="30dp" />
-            <TextView
-                android:id="@+id/fragment_about_msg2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="@string/about_msg2"
-                android:textColor="@color/pale_gray"
-                android:textSize="20sp" />
+                android:orientation="horizontal">
 
+                <com.facebook.widget.LoginButton
+                    android:id="@+id/authButton_about"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal" />
+
+                <Button
+                    android:id="@+id/twitterlogin"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@color/material_blue_500"
+                    android:text="tw"
+                    android:textColor="@color/white" />
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@color/button_material_dark"
+                    android:text="g+"
+                    android:textColor="@color/white" />
+            </LinearLayout>
 
         </LinearLayout>
 
 
-    </android.support.v7.widget.CardView>
+
+    </ScrollView>
 
 
-    <LinearLayout
-        android:id="@+id/fragment_about_social_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/fragment_about_card_title"
-        android:gravity="center"
-        android:orientation="horizontal">
-
-        <com.facebook.widget.LoginButton
-            android:id="@+id/authButton_about"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal" />
-
-        <Button
-            android:id="@+id/twitterlogin"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@color/material_blue_500"
-            android:text="tw"
-            android:textColor="@color/white" />
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@color/button_material_dark"
-            android:text="g+"
-            android:textColor="@color/white" />
-    </LinearLayout>
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/fragment_about_social_layout"
-        android:layout_gravity="center"
-        android:contentDescription="@string/btm_img_icon"
-        android:scaleType="fitEnd"
-        android:src="@drawable/actionbar_icon" />
 </RelativeLayout>
